[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icos-toolbox"
version = "0.3.0"
description = "In crystallo Optical Spectroscopy toolbox: treat and analyse icOS / TR-icOS UV-vis absorbance data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Nicolas Caramello" },
]
keywords = [
    "spectroscopy",
    "UV-vis",
    "absorbance",
    "crystallography",
    "icOS",
    "TR-icOS",
    "transient-absorption",
    "SVD",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# Runtime dependencies. Versions are lower bounds; adjust if your data shows
# behaviour differences on older releases.
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
# For contributors running the smoke tests / linting.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Paper" = "https://journals.iucr.org/j/issues/2025/03/00/jo5121/"

[project.scripts]
# Launch the GUI from the command line via:  icos-toolbox
icos-toolbox = "icOS_toolbox:main"

[tool.setuptools]
py-modules = ["icOS_toolbox"]
